<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.greyl.robin.applicationtest.MainActivity">

    <TextView
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:id="@+id/t_offline"
        android:text="@string/offline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:id="@+id/t_online"
        android:text="@string/online"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/b_team"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:layout_width="172dp"
        android:layout_height="60dp"
        android:text="@string/vsIA"
        android:id="@+id/b_vsIA"
        app:layout_constraintTop_toTopOf="@+id/b_vsP"
        android:layout_marginTop="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:layout_width="172dp"
        android:layout_height="60dp"
        android:text="@string/vsP"
        android:id="@+id/b_vsP"
        app:layout_constraintLeft_toRightOf="@+id/b_vsIA"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/t_offline" />

    <Button
        android:layout_width="344dp"
        android:layout_height="80dp"
        android:text="@string/teamVersus"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/b_vsIA"
        android:id="@+id/b_team"
        android:onClick=""
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:layout_width="344dp"
        android:layout_height="80dp"
        android:text="@string/vsPonline"
        android:id="@+id/b_vsPonline"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/t_online" />



</android.support.constraint.ConstraintLayout>
